overflow fixed

--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@ $primary-color: #343434;
 body {
     margin: 0;
     background: #FFD49B;
+    overflow-x: hidden;
 }
 
 .gradient-test {
@@ -68,6 +69,17 @@ main {
     }
 }
 
+.scroll {
+    font-family: 'Poppins', sans-serif;
+    animation-delay: 2s;
+    margin: 0;
+    padding: 0;
+    div {
+      color: #360C26;
+      text-align:center;
+    }
+}
+
 .image-heading {
     display: flex;
     align-items: center;
@@ -92,7 +104,7 @@ main {
   }
 }
 
-.parallax1, .parallax2, .parallax3 {
+.parallax1, .parallax2, .parallax3, .parallax4 {
   min-height: 200px; 
   background-attachment: fixed;
   background-position: center;
@@ -123,13 +135,20 @@ main {
 }
 
 .parallax3 {
-  background-image: url("images/projects.png");
+  background-image: url("images/technologies.png");
   border-left: 100vw solid transparent;
   border-top: 100px solid#360C26;
   border-bottom: 100px solid #360C26;
 }
 
-.slideInLeft, .slideInRight, .fadeInUp {
+.parallax4 {
+  background-image: url("images/projects.png");
+  border-top: 100px solid #360C26;
+  border-bottom: 100px solid #360C26;
+  border-right: 100vw solid transparent;
+}
+
+.slideInLeft, .slideInRight, .fadeInUp, .fadeIn {
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
 }
@@ -144,6 +163,10 @@ main {
 .fadeInUp {
     -webkit-animation-name: fadeInUp;
     animation-name: fadeInUp;
+}
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
 }
 
 
